# mini-globed

./: CMakeLists.txt  GUIDA.md  about.md  mod.json  server.py
.github/workflows/: build.yml
src/: main.cpp  network.cpp  network.hpp  player_node.cpp  player_node.hpp
